# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yml  spec.yaml  sqlx-data.json
configuration/: base.yml  local.yml  production.yml
migrations/: 20230608125910_make_status_not_null_in_subscriptions.sql  20230617123910_create_users_table.sql  20230625085101_seed_user.sql  20230704170908_create_idempotency_table.sql  20230708151039_create_newsletter_issues_table.sql  20230708174439_create_issue_delivery_queue_table.sql  20230710173633_add_information_for_issue_delivery_queue.sql  20230714180310_add_execute_after_column_for_issue_delivery_queue.sql
scripts/: init_db  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  idempotency_key_worker.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: current_password.rs  mod.rs  new_password.rs  reset_password.rs  subscriber_email.rs  subscriber_name.rs  user_password.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/helpers/: api_error.rs  error_chain_fmt.rs  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
